@@ -7,9 +7,9 @@ solution: Experience Manager, Experience Manager Sites
 feature: Deploying
 role: Admin
 exl-id: 93dc74b3-dfe3-442f-9dec-1b7af41cd4a1
-source-git-commit: d353cde4e9cc2af738e600d5a9b74928d98496cb
+source-git-commit: 90e63ad3be32b7ce551c5e3579c722ef75d97f95
 workflow-type: tm+mt
-source-wordcount: '1542'
+source-wordcount: '1564'
 ht-degree: 0%
 
 ---
@@ -48,10 +48,16 @@ Há várias regras a serem seguidas ao renomear o arquivo jar de início rápido
 
 Se você estiver executando o Oracle Java 17 ou Java 21, opções adicionais deverão ser adicionadas à linha de comando ao iniciar o AEM.
 
-Abaixo está um exemplo de como os parâmetros JVM adicionais devem ser ao iniciar o AEM no Java 17/Java 21:
+* Abaixo está um exemplo de como os parâmetros JVM adicionais devem ser ao iniciar o AEM no Java 17/Java 21:
 
 ```shell
 -XX:+UseG1GC --add-opens=java.desktop/com.sun.imageio.plugins.jpeg=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.jrt=ALL-UNNAMED --add-opens=java.naming/javax.naming.spi=ALL-UNNAMED --add-opens=java.xml/com.sun.org.apache.xerces.internal.dom=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=org.apache.sling.commons.threads -Djdk.util.zip.disableZip64ExtraFieldValidation=true
+```
+
+* [Somente Forms] Abaixo está uma amostra para garantir que o AEM Forms funcione corretamente com o Java 17/Java21, inclua os seguintes parâmetros JVM adicionais:
+
+```shell
+--add-opens=java.base/java.util=ALL-UNNAMED -add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED
 ```
 
 ## Modos de execução {#run-modes}
